# cqscraper

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: pull_request_template.rst
.github/workflows/: ci.yml
src/cqscraper/: __init__.py  __main__.py  confs.py  crawler.py  helpers.py  lister.py  product_scraper.py
tests/: __init__.py  test_lister.py
