[project]
authors = [
  {name = "Sergi Cortés", email = "sergi_cortes@hotmail.com"},
]
description = "A Python web scraping."
license = {text = "MIT"}
name = "cqscraper"
readme = "README.md"

# http://pypi.org/classifiers/
classifiers = [
  'License :: MIT License',
  'Intended Audience :: Science/Research',
  'Natural Language :: English',
  'Operating System :: POSIX',
  'Programming Language :: Python :: 3.10',
  "Development Status :: 1 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  'beautifulsoup4==4.12.3',
  'requests==2.32.2',
  'pillow==10.3.0',
  'PyMuPDF==1.24.4',
  'lxml==5.2.2',
  'validators==0.28.3',
  'pytest==8.2.1',
  'pytest-mock==3.14.0',
  'pytest-sugar==1.0.0',
  'mock==5.1.0',
  'typeguard==4.2.1',
  'pytest-xdist==3.6.1',
  'pytest-cov==5.0.0',
  'requests-mock==1.12.1',
  'hypothesis==6.102.6',
  'tox==4.15.0',
  'ruff==0.4.5',
  'radon==6.0.1',
  'safety==3.2.0',
]
requires-python = "==3.10"

dynamic = ["version"]

[project.urls]
changelog = "https://github.com/ixdi/cqscraper/blob/main/CHANGELOG.rst"
homepage = "https://github.com/ixdi/cqscraper"
repository = "https://github.com/ixdi/cqscraper.git"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-sugar",
]

[tool.pytest.ini_options]
# If you add a pytest config section elsewhere,
# you will need to delete this section
python_files = [
  "test_*.py",
  "*_test.py",
  "tests.py",
]
testpaths = [
  "tests",
]

[tool.ruff]
builtins = ["ellipsis"]
target-version = "py310"

[tool.ruff.lint]
exclude = [
  ".eggs",
  "doc",
  "_typed_ops.pyi",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
# E741: ambiguous variable names
ignore = [
  "E402",
  "E501",
  "E731",
  "E741",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W", # isort
  "I",
  "UP", # Pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# F401: imported but unsued
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["cqscraper"]
lines-after-imports = 2

[tool.setuptools_scm]
fallback_version = "999"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=6.2"]

